Added reset settings button to the gui.

--- a/trunk/umibe/src/ar/com/umibe/gui/resources/MainWindow.properties
+++ b/trunk/umibe/src/ar/com/umibe/gui/resources/MainWindow.properties
@@ -75,3 +75,4 @@ jCheckBox1.text=Enable drag and drop profile selector for folders
 jCheckBox2.text=Enable drag and drop profile selector for files
 Form.title=KireNcoder
 jMenuItem1.text=Exit
+jButton4.text=Reset Settings
