Beautification of the UI. Added splash, icons, reworked About tab. Bugfixes here and there.

--- a/trunk/umibe/src/ar/com/umibe/gui/resources/MainWindow.properties
+++ b/trunk/umibe/src/ar/com/umibe/gui/resources/MainWindow.properties
@@ -63,8 +63,6 @@ jPanel7.TabConstraints.tabTitle=Stats
 jPanel2.border.title=Global
 jPanel3.TabConstraints.tabTitle=About
 jPanel3.border.title=About
-jLabel8.text=KireNcoder v0.3alpha1
-jLabel9.text=By Joaqu\u00EDn Alejandro P\u00E9rez Fuentes
 jPanel4.border.title=File specific stats
 jButton8.text=Clear stats
 encodingStatus.text=
@@ -73,6 +71,17 @@ encodingStatus.background=236, 236, 230
 jButton3.text=Launch Profile Maker
 jCheckBox1.text=Enable drag and drop profile selector for folders
 jCheckBox2.text=Enable drag and drop profile selector for files
-Form.title=KireNcoder
+Form.title=Umibe
 jMenuItem1.text=Exit
 jButton4.text=Reset Settings
+jLabel8.text=
+#NOI18N
+jLabel8.icon=about.png
+jLabel9.text=jLabel9
+jLayeredPane1.TabConstraints.tabTitle=Surveilled Folders
+jLabel10.text=
+#NOI18N
+jLabel10.icon=dndfolder.png
+jLayeredPane2.TabConstraints.tabTitle=Queue
+#NOI18N
+jLabel11.icon=dndfile.png
