Finished adapting to the new Tool system. Fixed a few bugs in the GUI when rebuilding comboboxes after creating new profiles. The GUI now saves selected skin. Switching to native skinning does not work yet. Starting to bring the logger back up.

--- a/trunk/umibe/src/ar/com/umibe/gui/resources/MainWindow.properties
+++ b/trunk/umibe/src/ar/com/umibe/gui/resources/MainWindow.properties
@@ -84,3 +84,4 @@ jLabel10.icon=dndfolder.png
 jLayeredPane2.TabConstraints.tabTitle=Queue
 #NOI18N
 jLabel11.icon=dndfile.png
+jCheckBox3.text=Enable skinning
