GUI bug fixes. Fixed move after done.

--- a/trunk/umibe/src/ar/com/umibe/gui/resources/MainWindow.properties
+++ b/trunk/umibe/src/ar/com/umibe/gui/resources/MainWindow.properties
@@ -57,7 +57,7 @@ encodedSize.background=255, 255, 255
 jLabel20.text=Encoded size
 jLabel19.text=Original size
 jLabel18.text=Files transcoded
-jPanel7.border.title=Stats
+jPanel7.border.title=Encoding
 jPanel6.TabConstraints.tabTitle=Options
 jPanel7.TabConstraints.tabTitle=Stats
 jPanel2.border.title=Global
@@ -85,3 +85,6 @@ jLayeredPane2.TabConstraints.tabTitle=Queue
 #NOI18N
 jLabel11.icon=dndfile.png
 jCheckBox3.text=Enable skinning
+jCheckBox4.text=Keep original audio
+jPanel5.border.title=Look and Feel
+jPanel9.border.title=General GUI settings
