Added the option to keep original video tracks (untested). Added a few tooltips to the gui. Now it's possible to delete multiple jobs at once (lifesaver :D). Various bugfixes and minor changes

--- a/trunk/umibe/src/ar/com/umibe/gui/resources/MainWindow.properties
+++ b/trunk/umibe/src/ar/com/umibe/gui/resources/MainWindow.properties
@@ -88,3 +88,13 @@ jCheckBox3.text=Enable skinning
 jCheckBox4.text=Keep original audio
 jPanel5.border.title=Look and Feel
 jPanel9.border.title=General GUI settings
+jButton5.toolTipText=Adds a new worker
+jButton7.toolTipText=Starts the encoding process
+jButton6.toolTipText=Stops the encoding process, killing started processes
+jButton8.toolTipText=Completely wipes out previous stats
+jSlider1.toolTipText=Change default priority. Moving the slider to the right increases priority.
+jCheckBox1.toolTipText=If this is checked, Umibe won't look for profile files inside droped folders, but instead prompt the user to choose one
+jCheckBox2.toolTipText=If this is checked, Umibe won't use default settings for droped files, but instead prompt the user to choose one
+jCheckBox4.toolTipText=If checked, Umibe won't encode audio tracks but remux the ones from the input file
+jCheckBox5.toolTipText=If checked, Umibe won't encode video tracks but remux the ones from the input file
+jCheckBox5.text=Keep original video
